# synfig

./: .gitignore  .gitmodules  .travis.yml  .valgrind  1-build-windows-msvc.bat  1-conan-export.ps1  1-conan-export.sh  1-install-vcpkg.bat  1-setup-brew.sh  1-setup-linux-native.sh  1-setup-nix.sh  1-setup-osx-brew.sh  1-setup-windows-msys2.sh  2-build-cmake.sh  2-build-debug.sh  2-build-msys-Release-cmake.sh  2-build-msys-cmake -auto.sh  2-build-msys-cmake.sh  2-build-production.sh  3-package-osx-dmg.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog-development.md  ChangeLog-generate.sh  ChangeLog-split.sh  ChangeLog.last_id  ChangeLog.md  PACKAGING.md  README-CMake.md  README-ZH.md  README.md  TESTING.md  appveyor.yml  borders-bug.sif  build-cmake.sh  build-debug.sh  build-production.sh  build.conf.sample  conanfile.py  (+10 more)
ETL/: AUTHORS  CMakeLists.txt  ChangeLog.old  ETL-config.in  ETL.pc.in  ETL.prj  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  doxygen.cfg.in
ETL/ETL/: CMakeLists.txt  Makefile.am  _angle.h  _bezier.h  _bezier_angle.h  _bit_rotate.h  _boxblur.h  _bspline.h  _calculus.h  _clock_base.h  _clock_gettimeofday.h  _clock_system.h  _clock_win32hpcount.h  _curve.h  _curve_func.h  _fastangle.h  _fixed.h  _gaussian.h  _handle.h  _hermite.h  _misc.h  _mutex_null.h  _mutex_pthreads.h  _mutex_pthreads_simple.h  _mutex_win32.h  _pen.h  _rect.h  _ref_count.h  _rwlock.h  _smach.h  _smart_ptr.h  _status.h  _stringf.h  _surface.h  _trivial.h  _value.h  angle  bezier  boxblur  calculus  (+18 more)
ETL/ETL.pbproj/: darco.mode1  darco.pbxuser  frameworkfix.cpp
ETL/m4/: ETL.m4  subs.m4
ETL/test/: CMakeLists.txt  Makefile.am  angle.cpp  benchmark.cpp  clock.cpp  fixed.cpp  handle.cpp  hermite.cpp  pen.cpp  random.cpp  smach.cpp  smart_ptr.cpp  spline.cpp  stringf.cpp  surface.cpp  value.cpp
ETL/trunk/: AUTHORS  ETL.kdevprj  ETL.pc.in  ETL.spec.in  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  doxygen.cfg  doxygen.cfg.in
synfig-core/: AUTHORS  CMakeLists.txt  ChangeLog.old  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  doxygen.cfg.in  macosxbuild.sh  synfig.pc.in  synfig.prj  win32inst.nsi.in
synfig-core/build_tools/: autorevision.sh
synfig-core/config/: package
synfig-core/doc/: tangentproblem.txt
synfig-core/examples/: Makefile.am  about_dialog.sif  backdrop.sif  backdrop.sifz  business_card.sif  candy.sifz  eye.sif  eyes.sif  eyes.sifz  headmo.sifz  installer-logo.sif  japan.sif  mandelbrot.sif  mandelbrot.sifz  newjulia.sif  newjulia2.sif  newjulia2.sifz  pirates.sifz  prologue_kid.sif  sparkle.sif  splat.sifz  wallpaper.sif  warpcube.sif  warptext.sif  warptext.sifz  z_depth_test.sif  z_depth_test.sifz
synfig-core/fonts-msvc/: fonts.conf
synfig-core/m4/: ETL.m4  ax_boost_base.m4  ax_boost_program_options.m4  freetype2.m4  subs.m4  synfig.m4
synfig-core/po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  aa_DJ.po  ar.po  ar_EG.po  bs.po  ca.po  ca@valencia.po  cs.po  cs_CZ.po  da.po  de.po  el_GR.po  en_CZ.po  en_GB.po  es.po  es_AR.po  es_PY.po  eu.po  eu_ES.po  fa_IR.po  fr.po  gl.po  he.po  hi.po  hi_IN.po  hu.po  it.po  ja.po  ja_JP.po  ka.po  kab.po  ko_KR.po  lt.po  lv.po  nb.po  ne.po  (+21 more)
synfig-core/src/: CMakeLists.txt  Makefile.am  autorevision.h.cmake.in  config.h.cmake.in  template.cpp  template.h
synfig-core/test/: CMakeLists.txt  Makefile.am  angle.cpp  benchmark.cpp  bline.cpp  bone.cpp  clock.cpp  filesystem_path.cpp  gradient.cpp  gtest_angle.cpp  gtest_benchmark.cpp  gtest_bezier.cpp  gtest_bline.cpp  gtest_bone.cpp  gtest_clock.cpp  gtest_export_format.cpp  gtest_export_video.cpp  gtest_file_io_errors.cpp  gtest_file_io_recovery.cpp  gtest_file_io_sif.cpp  gtest_file_io_sifz.cpp  gtest_filesystem_path.cpp  gtest_golden_image.cpp  gtest_handle.cpp  gtest_keyframe.cpp  gtest_node.cpp  gtest_pen.cpp  gtest_reference_counter.cpp  gtest_render_basic.cpp  gtest_render_blend.cpp  gtest_string.cpp  gtest_surface_etl.cpp  gtest_valuenode_maprange.cpp  handle.cpp  hermite.cpp  keyframe.cpp  node.cpp  pen.cpp  reference_counter.cpp  smach.cpp  (+7 more)
synfig-core/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  doxygen.cfg  doxygen.cfg.in  macosxbuild.sh  synfig-config.in  synfig.kdevprj  synfig.pc.in  synfig.spec.in  win32build.sh  win32inst.nsi.in
synfig-studio/: AUTHORS  CMakeLists.txt  ChangeLog.old  Makefile.am  NEWS  README  TODO  analyze-clang.sh  analyze_cppcheck.sh  bootstrap.sh  configure.ac  doxygen.cfg.in  macosxbuild.sh  org.synfig.SynfigStudio.appdata.xml.in  org.synfig.SynfigStudio.desktop.in  org.synfig.SynfigStudio.xml.in  synfigstudio-cph-monitor  synfigstudio-thumbnailer.schemas.in  synfigstudio.appdata.xml.in  synfigstudio.desktop.in  synfigstudio.xml.in  update-authors.sh  win32inst.nsi.in
synfig-studio/brushes/: CMakeLists.txt  Makefile.am
synfig-studio/build_tools/: Makefile.am  autorevision.sh  sif2ico.sh
synfig-studio/config/: ltmain.patch  package
synfig-studio/docs/: bones_gui.txt
synfig-studio/images/: CMakeLists.txt  Makefile.am  about_icon.sif  action_add_to_group_icon.sif  action_add_to_set_icon.sif  action_doc_icons.sif  action_export_icon.sif  action_flat_interpolation_icon.sif  action_import_icon.sif  action_import_sequence_icon.sif  action_innerrounded_interpolation_icon.sif  action_interpolate_interpolation_icon.sif  action_layer_upgrade_icon.sif  action_offpeak_interpolation_icon.sif  action_peak_interpolation_icon.sif  action_remove_from_group_icon.sif  action_remove_from_set_icon.sif  action_rounded_interpolation_icon.sif  action_set_layer_description_icon.sif  action_show_dependencies_icon.sif  action_squared_interpolation_icon.sif  action_unexport_icon.sif  angle_icon.sif  animate_mode_icons.sif  application-exit.sif  background_rendering_icon.sif  bline_icon.sif  brush_size_decrease_icon.sif  brush_size_increase_icon.sif  canvas_and_importimage_icons.sif  canvas_icon.sif  children_icon.sif  circle_icon.sif  clear_redo_icon.sif  clear_undo_icon.sif  color_icon.sif  curves_icon.sif  decr_resolution_icon.sif  (+249 more)
(+6555 files in other folders)
